PROJECT(ParaViewCore)
set_property(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS ${VTK_DEFINITIONS})
ADD_SUBDIRECTORY(Common)
ADD_SUBDIRECTORY(VTKExtensions)
ADD_SUBDIRECTORY(ClientServerCore)
ADD_SUBDIRECTORY(ServerImplementation)
ADD_SUBDIRECTORY(ServerManager)

IF(BUILD_TESTING)
  ADD_SUBDIRECTORY(Testing)
ENDIF(BUILD_TESTING)
